# SimpleServo

./: .gitmodules  CMakeLists.txt
src/: main.c
